More cleanup. Reintroduced early service loading.